[tool.poetry]
name = "hammer-cadence-plugins"
version = "1.0.0"
description = "Cadence tool plugins for hammer-vlsi"
authors = ["Colin Schmidt <colin.schmidt@sifive.com>", "Edward Wang <edward.c.wang@compdigitec.com>", "John Wright <johnwright@eecs.berkeley.edu>"]
maintainers = ["Harrison Liew <harrisonliew@berkeley.edu>", "Daniel Grubb <dpgrubb@berkeley.edu>"]
readme = "README.md"
repository = "https://github.com/ucb-bar/hammer-cadence-plugins"
packages = [
    {include = "hammer"}
]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.9"
#hammer-vlsi = "^1.0.0"
#hammer-vlsi = {path = "../hammer", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
mypy = "^0.960"
types-PyYAML = "^6.0.0"
tox = "^3.25.1"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
default = false
secondary = true

[build-system]
requires = ["poetry-core>=1.0.8", "setuptools>=65.3"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310
isolated_build = True

[testenv]
deps = pytest
commands =
  pytest tests/ {posargs}
"""
